--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "mermaid": "^11.11.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
